--- a/css/login.css
+++ b/css/login.css
@@ -251,6 +251,7 @@ body.mode-login #pwdHint {
   border: 1px solid rgba(255,255,255,.18);
   background: rgba(255,255,255,.05);
 
+  -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
 
   transition: all .18s ease;
